# coins

./: .gitignore  .pre-commit-config.yaml  ReadMe.md  env.template  manage.py  pyproject.toml
CoinApp/: apps.py  celery.py  models.py  routers.py  serializers.py  tasks.py  test_api.py  test_tasks.py  viewsets.py
CoinApp/migrations/: 0001_initial.py
coins/: asgi.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  Dockerfile-scheduler  Dockerfile-worker  docker-compose.yaml  initdb.sh  webapp_entrypoint.sh
