[tool.poetry]
name = "coins"
version = "0.1.0"
description = ""
authors = ["Maciej Kasprzyk <github@kasprzyk.tech>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
djangorestframework = "^3.13.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
celery = {extras = ["redis"], version = "^5.2.3"}
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
